*Empty MediaWiki Message*

--- a/Лисъ.mw
+++ b/Лисъ.mw
@@ -2,7 +2,7 @@
 '''Лисъ''' ([[ѩзыкъ латиньскъ|латиньскы]]: ''Vulpes vulpes'') ѥстъ звѣрь пьсиѩ сѣмиѩ.
 
 {{commonscat|Vulpes vulpes}}
-[[Category:Звѣриѥ]]
+[[Category:Ꙁвѣриѥ́]]
 
 [[bg:Лисица]]
 [[cs:Liška_obecná_(šelma)]]
