*Empty MediaWiki Message*

--- a/Китъ.mw
+++ b/Китъ.mw
@@ -1,7 +1,7 @@
 [[Image:Humpback stellwagen edit.jpg|thumb|Китъ]]
 '''Китъ''' ѥстъ великъ звѣрь морьскъ.
 
-[[Category:ꙁвѣриѥ́]]
+[[Category:Ꙁвѣриѥ́]]
 
 [[af:Walvis]]
 [[ar:حوت]]
