*Empty MediaWiki Message*

--- a/Словѣньска_аꙁъбоукꙑ.mw
+++ b/Словѣньска_аꙁъбоукꙑ.mw
@@ -503,7 +503,7 @@
 |
 |}
 
-[[Category:Словѣньска азъбѹкы]]
+[[Category:Словѣ́ньска а́ꙁъбоукꙑ]]
 [[Category:Гра́мота]]
 
 [[af:Cyrilliese alfabet]]
