--- a/Вътора_словѣньска_аꙁъбоукꙑ.mw
+++ b/Вътора_словѣньска_аꙁъбоукꙑ.mw
@@ -154,7 +154,7 @@
 
 == ꙁьри такождє ==
 * [[Обитѣльско напьсаниѥ]]
-[[Category:Словѣньска азъбѹкы]]
+[[Category:Словѣ́ньска а́ꙁъбоукꙑ]]
 
 [[br:Lizherenneg hengirillek]]
 [[en:Early Cyrillic alphabet]]
