*Empty MediaWiki Message*

--- a/Напьсаниѥ_Самоуилоу.mw
+++ b/Напьсаниѥ_Самоуилоу.mw
@@ -1,12 +1,12 @@
-[[Image:SamuilInscription.png|thumb|right|250px|Напьсаниѥ Самѹилѹ]]
+[[Дѣ́ло:SamuilInscription.png|thumb|right|250px|Напьсаниѥ Самоуилоу]]
 
-'''Надъгробьно напьсаниѥ''' [[Самоилъ‎|Самѹилъ]] [[Блъгарї|блъгарьскъ]] цѣсар҄ь на своихъ ближьн҄иихъ гробѣ сътвори. Древл҄ьнѥ напьсаниѥ [[словѣньска азъбѹкы|климентовицеѭ]] ѥстъ. Напьсано бы лѣта 993, и тамо сѥ число напьсано ѥстъ. Камы 90 лѣтѣхъ ИЇ сътолѣти [[Македонї (страна)|Македонїи]] обрѣтенъ быстъ. Напьсаниѥ велиѥ старописменьноѥ (палеографїчьноѥ) значениѥ иматъ. По  образѹ бѹкъвъ людиѥ о ветъхости кънигъ и ихъ напьсани врѣмене сѫдити могѫтъ.
+'''Надъгробьно напьсаниѥ''' [[Самоилъ‎|Самоуилъ]] [[Блъгарї|блъгарьскъ]] цѣсар҄ь на своихъ ближьн҄иихъ гробѣ сътвори. Дрєвл҄ьнꙗѥ напьсаниѥ [[словѣньска азъбѹкы|климєнтовицєѭ]] ѥстъ. Напьсано бꙑ лѣта 993, и тамо сѥ число напьсано ѥстъ. Камꙑ 90 лѣтѣхъ ИЇ сътолѣтиꙗ [[Македонї (страна)|Макєдонїи]] обрѣтєнъ бꙑстъ. Напьсаниѥ вєлиѥ старописмєньноѥ (палєографїчьноѥ) ꙁначєниѥ иматъ. По обраꙁоу боукъвъ людиѥ о вєтъхости кънигъ и ихъ напьсаниꙗ врѣмєнє сѫдити могѫтъ.
 
 == Напьсаниѥ ==
-<blockquote>въ имѧ ѡтьца и съина и с҃таго дѹха· азъ самоип(л)ь рабъ бжи полагаѫ
-памѧть ѡтьцѹ и матєри и братѹ на кръстѣхъ сихъ· имєна ѹсъпъшихъ
-никола рабъ бж҃и ... ѣ давдъ написа ... въ лѣто отъ сътворєни мирѹ
-ѕ҃· фа҃· инъдикта ѕ҃·</blockquote>
+<blockquote>въ имѧ ѡтьца и съина и с҃таго доуха· аꙁъ самоип(л)ь рабъ бжи полагаѫ
+памѧть ѡтьцоу и матєри и братоу на кръстѣхъ сихъ· имєна оусъпъшихъ
+никола рабъ бж҃и ... ѣ давдъ написа ... въ лѣто отъ сътворєниꙗ мироу
+ꙃ҃· фа҃· инъдикта ꙃ҃·</blockquote>
 
 [[Category:Словѣньскъ ѩзыкъ]]
 
