*Empty MediaWiki Message*

--- a/Обитѣльско_напьсаниѥ.mw
+++ b/Обитѣльско_напьсаниѥ.mw
@@ -1,9 +1,9 @@
-'''Обитѣльско напьсаниѥ''' [[Блъгарї|Блъгарьрска]] цѣсар  [[Їѡаннъ Владиславъ|Їѡанна Владислава]] ѥстъ.
-[[Image:Bitolski nadpis.jpg|thumb|right|200px|<center>Цѣсар Їѡанна Владислава Обитѣльско напьсание ]]
+'''Обитѣльско напьсаниѥ''' [[Блъгарї|Блъгарьрска]] цѣсарꙗ [[Їѡаннъ Владиславъ|Їѡанна Владислава]] ѥстъ.
+[[Дѣ́ло:Bitolski nadpis.jpg|thumb|right|200px|<center>Цѣсарꙗ Їѡанна Владислава Обитѣльско напьсаниє ]]
 
 == Напьсаниѥ ==
 
-<blockquote>† Въ лѣто Ѕ ҃Ф ҃К ҃Г ҃ (1015) отъ створенїа мира обнови сѧ съ градь зидаемъ и дѣлаемъ Їѡаном самодрьжъцемъ блъгарьскомь и помощїѫ и молїтвамї прѣс ҃тыѧ влад ҃чицѧ нашеѧ Б ҃чѧ ї въз()стѫпенїе І ҃В ҃ (12) ı връховънюю ап ҃лъсъ же градь дѣлань бысть на ѹбѣжище и на сп҃сенѥ ї на жизнь бльгаромъ начѧть же бысть градь сь [[Обитѣль|Битола]] м ҃ца окто ҃вра въ К ҃(20). Конъчѣ же сѧ м ҃ца ... исходѧща съ самодрьжъць быстъ бльгарїнь родомь ѹнѹкъ Николы же ї Риѱимиѧ благовѣрьнѹ сынь Арона [[Самоилъ|Самоила]] же брата  сѫща ц ҃рѣ самодрьжавьнаго іаже ı разбїсте въ Щїпонѣ грьчьскѫ воїскѫ ц ҃рѣ Васїлїа кде же взѧто бы злато ... фоѧ съжев ... ц҃рь разбїенъ бы ц҃рѣмь Васїлїемь Ѕ ҃Ф ҃К ҃В ҃ (1015) г. л<sup>т</sup>ѣ оть створенїѧ мира ... їѹ съп() лѣтѹ семѹ и сходѧщѹ</blockquote>
+<blockquote>† Въ лѣто ꙃ ҃Ф ҃К ҃Г ҃ (1015) отъ створєнїа мира обнови сѧ съ градь ꙁидаємъ и дѣлаємъ Їѡаном самодрьжъцємъ блъгарьскомь и помощїѫ и молїтвамї прѣс ҃тꙑѧ влад ҃чицѧ нашєѧ Б ҃чѧ ї въꙁ()стѫпєнїє І ҃В ҃ (12) ı връховънюю ап ҃лъсъ жє градь дѣлань бꙑсть на оубѣжищє и на сп҃сєнѥ ї на жиꙁнь бльгаромъ начѧть жє бꙑсть градь сь [[Обитѣль|Битола]] м ҃ца окто ҃вра въ К ҃(20). Конъчѣ жє сѧ м ҃ца ... исходѧща съ самодрьжъць бꙑстъ бльгарїнь родомь оуноукъ Николꙑ жє ї Риѱимиѧ благовѣрьноу сꙑнь Арона [[Самоилъ|Самоила]] жє брата сѫща ц ҃рѣ самодрьжавьнаго іажє ı раꙁбїстє въ Щїпонѣ грьчьскѫ воїскѫ ц ҃рѣ Васїлїа кдє жє вꙁѧто бꙑ ꙁлато ... фоѧ съжєв ... ц҃рь раꙁбїєнъ бꙑ ц҃рѣмь Васїлїємь ꙃ ҃Ф ҃К ҃В ҃ (1015) г. л<sup>т</sup>ѣ оть створєнїѧ мира ... їоу съп() лѣтоу сємоу и сходѧщоу</blockquote>
 
 [[Category:Словѣньскъ ѩзыкъ]]
 
