*Empty MediaWiki Message*

--- a/Самоилъ.mw
+++ b/Самоилъ.mw
@@ -1,6 +1,6 @@
 '''Самоилъ''' (997—1014) [[Блъгарї|Блъгарїѩ]] цѣсар҄ь бѣ.
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 [[Напьсаниѥ Самѹилѹ]]
 
 [[Category:Людиѥ]]
