*Empty MediaWiki Message*

--- a/Самоилъ.mw
+++ b/Самоилъ.mw
@@ -1,4 +1,4 @@
-'''Самоилъ''' (997—1014) [[Блъгарї|Блъгарїѩ]] цѣсар҄ь бѣ.
+'''Самоилъ''' (997—1014) [[Блъгарі́ꙗ|Блъгарі́ѩ]] цѣсар҄ь бѣ.
 
 == ꙁьри такождє ==
 [[Напьсаниѥ Самѹилѹ]]
