*Empty MediaWiki Message*

--- a/Самоилъ.mw
+++ b/Самоилъ.mw
@@ -1,7 +1,7 @@
 '''Самоилъ''' (997—1014) [[Блъгарі́ꙗ|Блъгарі́ѩ]] цѣсар҄ь бѣ.
 
 == ꙁьри такождє ==
-[[Напьсаниѥ Самѹилѹ]]
+[[Напьса́ниѥ Самоуи́лоу]]
 
 [[Category:Людиѥ]]
 
