*Empty MediaWiki Message*

--- a/Напьсаниѥ_Самоуилоу.mw
+++ b/Напьсаниѥ_Самоуилоу.mw
@@ -8,7 +8,7 @@
 никола рабъ бж҃и ... ѣ давдъ написа ... въ лѣто отъ сътворєниꙗ мироу
 ꙃ҃· фа҃· инъдикта ꙃ҃·</blockquote>
 
-[[Category:Словѣньскъ ѩзыкъ]]
+[[Category:Словѣ́ньскъ ѩꙁꙑ́къ]]
 
 [[bg:Самуилов надпис]]
 [[ca:Inscripció de Samuel]]
