*Empty MediaWiki Message*

--- a/Обитѣльско_напьсаниѥ.mw
+++ b/Обитѣльско_напьсаниѥ.mw
@@ -5,7 +5,7 @@
 
 <blockquote>† Въ лѣто ꙃ ҃Ф ҃К ҃Г ҃ (1015) отъ створєнїа мира обнови сѧ съ градь ꙁидаємъ и дѣлаємъ Їѡаном самодрьжъцємъ блъгарьскомь и помощїѫ и молїтвамї прѣс ҃тꙑѧ влад ҃чицѧ нашєѧ Б ҃чѧ ї въꙁ()стѫпєнїє І ҃В ҃ (12) ı връховънюю ап ҃лъсъ жє градь дѣлань бꙑсть на оубѣжищє и на сп҃сєнѥ ї на жиꙁнь бльгаромъ начѧть жє бꙑсть градь сь [[Обитѣль|Битола]] м ҃ца окто ҃вра въ К ҃(20). Конъчѣ жє сѧ м ҃ца ... исходѧща съ самодрьжъць бꙑстъ бльгарїнь родомь оуноукъ Николꙑ жє ї Риѱимиѧ благовѣрьноу сꙑнь Арона [[Самоилъ|Самоила]] жє брата сѫща ц ҃рѣ самодрьжавьнаго іажє ı раꙁбїстє въ Щїпонѣ грьчьскѫ воїскѫ ц ҃рѣ Васїлїа кдє жє вꙁѧто бꙑ ꙁлато ... фоѧ съжєв ... ц҃рь раꙁбїєнъ бꙑ ц҃рѣмь Васїлїємь ꙃ ҃Ф ҃К ҃В ҃ (1015) г. л<sup>т</sup>ѣ оть створєнїѧ мира ... їоу съп() лѣтоу сємоу и сходѧщоу</blockquote>
 
-[[Category:Словѣньскъ ѩзыкъ]]
+[[Category:Словѣ́ньскъ ѩꙁꙑ́къ]]
 
 [[bg:Битолски надпис]]
 [[en:Bitola inscription]]
