*Empty MediaWiki Message*

--- a/Обитѣльско_напьсаниѥ.mw
+++ b/Обитѣльско_напьсаниѥ.mw
@@ -1,4 +1,4 @@
-'''Обитѣльско напьсаниѥ''' [[Блъгарї|Блъгарьрска]] цѣсарꙗ [[Їѡаннъ Владиславъ|Їѡанна Владислава]] ѥстъ.
+'''Обитѣльско напьсаниѥ''' [[Блъгарі́ꙗ|Блъгарьрска]] цѣсарꙗ [[Їѡаннъ Владиславъ|Їѡанна Владислава]] ѥстъ.
 [[Дѣ́ло:Bitolski nadpis.jpg|thumb|right|200px|<center>Цѣсарꙗ Їѡанна Владислава Обитѣльско напьсаниє ]]
 
 == Напьсаниѥ ==
