*Empty MediaWiki Message*

--- a/Новосибирьскъ.mw
+++ b/Новосибирьскъ.mw
@@ -6,10 +6,10 @@
 | Глава = Владимиръ Городєцкꙑи
 | Людии = 1 391,9
 | Основанъ = 1893
-| Нареченъ градъ = 1903
-| Харта = [[Видъ:NovosibirskLocatie.png|200 px]]
+| Нарєчєнъ градъ = 1903
+| Харта = [[Дѣ́ло:NovosibirskLocatie.png|200 px]]
 }}
-'''Новосиби́рьскъ''' и {{Lang-ru|Новосибирск}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Новосиби́рьска о́бласть|Новосибирьскꙑ]] области гла́вьнъ гра́дъ ѥ́сть ⁙ Новосиби́рьскъ наибол҄ии гра́дъ [[Сиби́рь|Сиби́ри]] ѥ́сть ⁙ Люди́и обита́ѥтъ 1 391,9 
+'''Новосиби́рьскъ''' и {{Lang-ru|Новосибирск}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] [[Новосиби́рьска о́бласть|Новосибирьскꙑ]] области гла́вьнъ гра́дъ ѥ́сть ⁙ Новосиби́рьскъ наибол҄ии гра́дъ [[Сиби́рь|Сиби́ри]] ѥ́сть ⁙ Люди́и обита́ѥтъ 1 391,9
 
 == їсторі́ꙗ ==
 [[Дѣ́ло:Вид на центр с вертолёта.jpg|thumb|left]]
@@ -34,7 +34,7 @@
 * [http://www.novo-sibirsk.ru/ Новосиби́рьскъ Мєждоусѣтии]
 {{Рѡсїѩ наибол҄ьше гради}}
 
-[[Category:Гради]]
+[[Category:Гра́ди]]
 [[Category:Прѣзъсибирьскъ колѣинъ пѫть]]
 
 [[af:Nowosibirsk]]
