*Empty MediaWiki Message*

--- a/Нєва.mw
+++ b/Нєва.mw
@@ -1,7 +1,7 @@
 [[Дѣ́ло:Neva map.png|thumb]]
 '''Нєва''' рѣка въ [[Рѡсі́ꙗ|Рѡсі́и]] ѥсть. На Нєвѣ [[Санкт-Пєтєрбоу́ргъ]] построѥнъ ѥстъ.
 
-[[Category:Рѣкы]]
+[[Category:Рѣ́кꙑ]]
 
 [[ar:نهر نيفا]]
 [[bg:Нева]]
