*Empty MediaWiki Message*

--- a/Доунавъ.mw
+++ b/Доунавъ.mw
@@ -1,13 +1,11 @@
-'''Дѹнавъ''' ѥстъ велика рѣка [[Еѵрѡпа|Еѵрѡпы]].
+'''Доунавъ''' ѥстъ вєлика рѣка [[Єѵрѡ́па|єѵрѡпꙑ]].
 
-[[Category:Рѣкы]]
+[[Category:Рѣ́кꙑ]]
 
 {{Link FA|fr}}
-
 {{Link FA|de}}
 {{Link FA|hu}}
 {{Link FA|uk}}
-
 {{Link FA|hr}}
 
 [[als:Donau]]
