*Empty MediaWiki Message*

--- a/Дънѣпръ.mw
+++ b/Дънѣпръ.mw
@@ -1,10 +1,10 @@
-[[Видъ:Дніпро Хортиця.jpg|thumb|Дънѣ́пра ви́дъ]]
+[[Дѣ́ло:Дніпро Хортиця.jpg|thumb|Дънѣ́пра ви́дъ]]
 '''Дънѣ́пръ''' и {{lang-ru|Днепр}} · {{lang-uk|Дніпро}} · {{lang-be|Дняпро}} · вєлика рѣка́ [[Рѡсі́ꙗ|Рѡсі́ѩ]] · [[Бѣла Роусь|Бѣлꙑ Роу́си]] и [[Оукраина|Оукраи́нꙑ]] ѥ́стъ ⁙
 Дънѣ́прѣ [[Киѥвъ]] · Сьмолѣ́ньскъ · Канѣвъ и многꙑ инꙑ гради ꙁьданꙑ сѫ́тъ
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Dnieper River}}
-[[Category:Рѣкы]]
+[[Category:Рѣ́кꙑ]]
 
 [[be:Рака Дняпро]]
 [[be-x-old:Дняпро]]
