*Empty MediaWiki Message*

--- a/Вльга.mw
+++ b/Вльга.mw
@@ -1,7 +1,6 @@
-'''Вльга''' рѣка [[Рѡсї|Рѡсїи]] ѥстъ.
+'''Вльга''' рѣка [[Рѡсі́ꙗ|Рѡсїи]] ѥстъ.
 
-
-[[Category:Рѣкы]]
+[[Category:Рѣ́кꙑ]]
 
 [[am:ቮልጋ ወንዝ]]
 [[an:Río Bolga]]
