--- a/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
+++ b/Прьваꙗ_дѷнастиꙗ_Єгѷпьта.mw
@@ -1,5 +1,5 @@
-'''Прьваꙗ дѷнастиꙗ [[Єгѷптъ|Єгѷпта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владꙑчьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х ⁙ Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжєръ|Дъжєръ]] и [[Дєнъ|Дєнъ]] и прочии сѫ́тъ ⁙ Брьньни гроби ихъ обрѣщєни бꙑшѧ дрєвл҄ьн҄ихъ градѣхъ [[Абѷдъ|Абѷдѣ]] и [[Саккара|Саккарѣ]] отъ [[Вєли́ка Британі́ꙗ|англі́иська]] [[Архєологі́ꙗ|архєолога]] [[Флиндерсъ Петри|Флиндєрса Пєтри]] сътолѣтиꙗ 19
-[[Category:Дрє́вл҄ьн҄ь Є́гѷптъ]]
+'''Прьваꙗ дѷнастиꙗ [[Єгѷптъ|Єгѷпта]]''' [[Фараѡнъ|фараѡни]] бѣ ции владꙑчьствоваахѫ отъ лѣта 3035 прѣдъ р҃х до лѣта 2890 прѣдъ р҃х ⁙ Сии фараѡни [[Хоръ-Аха|Хоръ-Аха]] и [[Дъжєръ|Дъжєръ]] и [[Дєнъ|Дєнъ]] и прочии сѫ́тъ ⁙ Брьньни гроби ихъ обрѣщєни бꙑшѧ дрєвл҄ьн҄ихъ градѣхъ [[Абѷдъ|Абѷдѣ]] и [[Саккара|Саккарѣ]] отъ [[Вѣли́ка Брита́нїꙗ|англі́иська]] [[Архєологі́ꙗ|архєолога]] [[Флиндерсъ Петри|Флиндєрса Пєтри]] сътолѣтиꙗ 19
+[[Category:Єгѷптъ]]
 
 [[en:First dynasty of Egypt]]
 [[ar:أسرة مصرية أولى]]
