*Empty MediaWiki Message*

--- a/Авѷдъ.mw
+++ b/Авѷдъ.mw
@@ -1,7 +1,7 @@
 {{coord|display=title|26|11|6|N|31|55|8|E|}}
 [[Дѣ́ло:Osireion.jpg|thumb]]
-'''Абѷдъ''' дрєвл҄ьнꙗ [[Егѷптъ|єгѷпта]] градъ бѣ · идє [[Осїрь|Осїровъ]] гробъ бѣ · ꙗко пьсано ѥ́стъ єгѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]]
-[[Category:Дрє́вл҄ьн҄ь Є́гѷптъ]]
+'''Абѷдъ''' дрєвл҄ьнꙗ [[Єгѷптъ|єгѷпта]] градъ бѣ · идє [[Осїрь|Осїровъ]] гробъ бѣ · ꙗко пьсано ѥ́стъ єгѷптьстѣхъ [[мѷѳъ|мѷѳѣхъ]]
+[[Category:Єгѷптъ]]
 
 [[ar:أبيدوس]]
 [[ca:Abidos]]
