*Empty MediaWiki Message*

--- a/Єгѷптъ.mw
+++ b/Єгѷптъ.mw
@@ -13,7 +13,7 @@
 '''Єгѷптъ''' и {{lang-ar|مصر}} · єпїсимьно имѧ '''Єгѷптьска Ара́вьска Димократі́ꙗ''' и {{lang-ar|جمهورية مصر العربية}} · [[Афрїка|Афрїкꙑ]] и [[Асі́ꙗ|Асі́ѩ]] дрьжа́ва ѥ́стъ ⁙ Дрьжа́вьнъ ѩꙁꙑ́къ [[Аравьскъ ѩзыкъ|ара́вьскъ]] ѥ́стъ ⁙ Люди́и обита́ѥтъ 77,5 лєѡдръ ⁙ Сто́льнъ гра́дъ [[Каїро]] ѥ́стъ ⁙ [[Ара́вьскꙑ стра́нꙑ|Ара́вьска стра́на]] ѥ́стъ
 
 
-[[Category:Дрьжа́вꙑ]]
+[[Category:Єгѷптъ]]
 
 {{Link FA|ar}}
 
