*Empty MediaWiki Message*

--- a/Асканио_Сфорца.mw
+++ b/Асканио_Сфорца.mw
@@ -1,4 +1,4 @@
-'''Кардиналъ Риарио Сфорца''' приѩлъ санъ папежѣ и наречесѧ [[Папежь Алеѯандръ Ѕ|Алеѯандръ Ѕ]] Борджї ѥстъ.
+'''Кардиналъ Риарио Сфорца''' приѩлъ санъ папєжѣ и нарєчєсѧ [[Папежь Алеѯандръ Ѕ|Алєѯандръ ꙃ]] Борджїꙗ ѥстъ.
 
 [[Category:Кардиналы]]
 [[Category:Людиѥ]]
