*Empty MediaWiki Message*

--- a/Лорєнцо_Кибо_дє_Мари.mw
+++ b/Лорєнцо_Кибо_дє_Мари.mw
@@ -1,4 +1,3 @@
-'''Кардиналъ Чибо''' приѩлъ санъ папежѣ и наречесѧ [[Папежь Алеѯандръ Ѕ|Алеѯандръ Ѕ]] Борджї ѥстъ.
+'''Кардиналъ Чибо''' приѩлъ санъ папєжѣ и нарєчєсѧ [[Папежь Алеѯандръ Ѕ|Алєѯандръ ꙃ]] Борджїꙗ ѥстъ.
 
-[[Category:Кардиналы]]
 [[Category:Людиѥ]]
