*Empty MediaWiki Message*

--- a/Асканио_Сфорца.mw
+++ b/Асканио_Сфорца.mw
@@ -1,5 +1,8 @@
 '''Кардиналъ Риарио Сфорца''' приѩлъ санъ папєжѣ и нарєчєсѧ [[Папежь Алеѯандръ Ѕ|Алєѯандръ ꙃ]] Борджїꙗ ѥстъ.
 
+== ꙁьри́ та́кождє ==
+* [[Кардиналъ Чибо]]
+
 [[Category:Людиѥ]]
 
 [[de:Tommaso Riario Sforza]]
