*Empty MediaWiki Message*

--- a/Лорєнцо_Кибо_дє_Мари.mw
+++ b/Лорєнцо_Кибо_дє_Мари.mw
@@ -1,3 +1,6 @@
 '''Кардиналъ Чибо''' приѩлъ санъ папєжѣ и нарєчєсѧ [[Папежь Алеѯандръ Ѕ|Алєѯандръ ꙃ]] Борджїꙗ ѥстъ.
 
+== ꙁьри́ та́кождє ==
+* [[Кардиналъ Сфорца]]
+
 [[Category:Людиѥ]]
