*Empty MediaWiki Message*

--- a/Асканио_Сфорца.mw
+++ b/Асканио_Сфорца.mw
@@ -3,7 +3,7 @@
 == ꙁьри́ та́кождє ==
 * [[Кардиналъ Чибо]]
 
-[[Category:Людиѥ]]
+[[Category:Кардина́лꙑ]]
 
 [[de:Tommaso Riario Sforza]]
 [[en:Tommaso Riario Sforza]]
