*Empty MediaWiki Message*

--- a/Асканио_Сфорца.mw
+++ b/Асканио_Сфорца.mw
@@ -1,4 +1,4 @@
-'''Кардиналъ Риарио Сфорца''' приѩлъ санъ папєжѣ и нарєчєсѧ [[Папежь Алеѯандръ Ѕ|Алєѯандръ ꙃ]] Борджїꙗ ѥстъ.
+'''Кардиналъ Риарио Сфорца''' приѩлъ санъ папєжѣ и нарєчєсѧ [[Папєжь Алєѯандръ Ꙃ҃|Алєѯандръ ꙃ]] Борджїꙗ ѥстъ.
 
 == ꙁьри́ та́кождє ==
 * [[Кардиналъ Чибо]]
