*Empty MediaWiki Message*

--- a/Кїкєрѡнъ.mw
+++ b/Кїкєрѡнъ.mw
@@ -5,7 +5,7 @@
 Кїкєрѡнъ рождєнъ бѣашє отьчьствѣ · ѥжє ис [[кон҄ьно воинство (римьскъ образъ)|кон҄ьнаѥго воиньства]] бѣашє · и сѥго дѣл҄ьма доброѥ оучєниѥ обрѣлъ бѣашє · вънѥмьжє вєлии оуспѣхъ ѥмоу бѣашє.
 
 {{stub}}
-[[Category:Лю́диѥ]]
+[[Category:Людиѥ]]
 [[Category:Фїлософи]]
 
 {{Link FA|fi}}
