*Empty MediaWiki Message*

--- a/Владимиръ_Поутинъ.mw
+++ b/Владимиръ_Поутинъ.mw
@@ -5,7 +5,7 @@
 
 Рождєнъ ѥ́стъ Лєниноградѣ (дьньсь [[Санкт-Пєтєрбоу́ргъ]]) лѣта [[1952]] ⁙ Трѫдишє сѧ министрьствѣ дрьжавьнаѥго опасєниꙗ Нѣмьцѣхъ · по томь Пєтєрбоуржьсцѣ оуправѣ града помощьникъ градьскаѥго главꙑ · Лѣта [[1998]] въꙁглави съвѫꙁьнѫѭ слоужьбѫ опасєниꙗ Рѡсі́ѩ · Лѣтѣ [[1999]] ави сѧ прѣдъсѣдатєл̑ь правитєл̑ьства · того жє лѣта [[дєкємврїꙗ 31]] отрєчє сѧ прьвꙑи прѣдъсѣдатєл̑ь [[Борисъ Ѥльцинъ]] о власти · Вєсноѭ [[2000]] Владимиръ Поутинъ иꙁбьранъ бѣ прѣмꙑимь гласованиѥмь прѣдъсѣдатєл̑ь Рѡсі́ѩ на чєтꙑрє лѣта · лѣтѣ [[2004]] прѣиꙁбьранъ ѥстъ на вътороѥ врѣмѧ
 
-[[Category:Лю́диѥ|Поутинъ]]
+[[Category:Людиѥ|Поутинъ]]
 [[Category:Рѡсі́ꙗ]]
 
 [[af:Wladimir Poetin]]
