*Empty MediaWiki Message*

--- a/Пєтръ_Вєликꙑи.mw
+++ b/Пєтръ_Вєликꙑи.mw
@@ -1,7 +1,7 @@
 [[Видъ:Peter the Great.jpg|left|thumb|250px|Пє́тръ Вєли́кꙑи]]
 '''Пє́тръ А҃ Алє́ѯїѥвищь Рома́новъ''' и {{lang-ru|Пётр Алексе́евич Рома́нов, Пётр Вели́кий, Пётр Пе́рвый}} · рєкомꙑи Вєли́кꙑи · Рѡсїискъ цѣсарь · послѣди їмпєратѡръ ѥстъ ⁙ Пєтръ Вєликꙑи гра́дъ [[Санкт-Пєтєрбоу́ргъ]] почѧ
 {{commonscat|Peter I of Russia}}
-[[Category:Лю́диѥ]]
+[[Category:Людиѥ]]
 [[Category:Рѡсі́ꙗ]]
 
 {{Link FA|hu}}
