*Empty MediaWiki Message*

--- a/Їѡаннъ_Асєн҄ь_В҃.mw
+++ b/Їѡаннъ_Асєн҄ь_В҃.mw
@@ -1,7 +1,8 @@
 [[Дѣ́ло:Ivan-asen-II-zograf-portrait.jpg|thumb]]
 '''Иванъ Асєн҄ь В҃''' и {{lang-bg| Иван Асен II}} · 1218-1241 · [[Блъгарі́ꙗ|Блъгарі́ѩ]] цѣсарь бѣ ⁙ [[Ива́нъ Асє́н҄ь А҃|Ива́на Асє́нꙗ А҃]] сꙑнъ ѥ́стъ ⁙ Вєлико цѣсарьство съꙁьда · ѥгожє сто́льнъ гра́дъ [[Трънѡвъ]] бѣ
 {{commonscat|Ivan Asen II of Bulgaria}}
-[[Category:Блъгарі́ꙗ]][[Category:Лю́диѥ]]
+[[Category:Блъгарі́ꙗ]]
+[[Category:Людиѥ]]
 
 [[bg:Иван Асен II]]
 [[de:Iwan Asen II.]]
