*Empty MediaWiki Message*

--- a/Москъвьска_область.mw
+++ b/Москъвьска_область.mw
@@ -1,7 +1,7 @@
-[[Видъ:Flag of Moscow Oblast.png|right|thumb|200px|Москъвьскыѩ области знамѧ]]
-'''Москъвьска область''' ([[Рѹсьскъ ѩзыкъ|рѹсьскы]] ''Московская область'') [[Рѡсї|Рѡсїи]] ѥстъ, ѥѩже главьнъ градъ [[Москъва]] ѥстъ. Почѧта ѥстъ лѣта 1929, бол҄ии градъ (по Москъвѣ) [[Балашиха]] ѥстъ.
+[[Дѣ́ло:Flag of Moscow Oblast.png|right|thumb|200px|Москъвьскꙑѩ области ꙁнамѧ]]
+'''Москъвьска область''' ({{lang-ru|Московская область}}) [[Рѡсі́ꙗ|Рѡсі́и]] ѥстъ, ѥѩжє главьнъ градъ [[Москъва]] ѥстъ. Почѧта ѥстъ лѣта 1929, бол҄ии градъ (по Москъвѣ) [[Балашиха]] ѥстъ.
 
-[[Катигорї:Рѡсї]]
+[[Катигорї:Рѡсі́ꙗ]]
 
 [[ar:موسكو أوبلاست]]
 [[be:Маскоўская вобласць]]
