*Empty MediaWiki Message*

--- a/Балашиха.mw
+++ b/Балашиха.mw
@@ -1,15 +1,15 @@
 {{Градъ|Имѧ = Балашиха
 | знамѧ= Flag of Balashikha (Moscow oblast).png|100 px]]
 | знакъ = Coat of Arms of Balashikha (Moscow oblast) (1999).png
-| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсї
-| Глава = 
-| Людии = 183 тысѫщѧ
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсїꙗ
+| Глава =
+| Людии = 183 тꙑсѫщѧ
 | Основанъ = 1830
-| Харта = 
+| Харта =
 |}}
-'''Балашиха''' ({{lang-ru|Балашиха}}) [[Рѡсї|Рѡсїѩ]] [[Москъвьска область|Москъвьскы области]] [[Балашишьска чѧсть|Балашишьскы чѧсти]] главьнъ градъ ѥстъ. По Москъвѣ бол҄ии градъ Москъвьскы области ѥстъ. Основана лѣта 1830 ѥстъ, наречена градъ съ лѣта 1939 ѥстъ. Построѥна рѣцѣ [[Пѣхъра|Пѣхърѣ]] ѥстъ, людии обитаѥтъ 183 тысѫщѧ.
+'''Балашиха''' ({{lang-ru|Балашиха}}) [[Рѡсї|Рѡсїѩ]] [[Москъвьска область|Москъвьскꙑ области]] [[Балашишьска чѧсть|Балашишьскꙑ чѧсти]] главьнъ градъ ѥстъ. По Москъвѣ бол҄ии градъ Москъвьскꙑ области ѥстъ. Основана лѣта 1830 ѥстъ, нарєчєна градъ съ лѣта 1939 ѥстъ. Построѥна рѣцѣ [[Пѣхъра|Пѣхърѣ]] ѥстъ, людии обитаѥтъ 183 тꙑсѫщѧ.
 
-[[Image:Coat of Arms of Balashikha (Moscow oblast) (1977).png|thumb|Балашихы древл&#x0484;ьн҄ь знакъ]]
+[[Дѣ́ло:Coat of Arms of Balashikha (Moscow oblast) (1977).png|thumb|Балашихꙑ дрєвл҄ьн҄ь ꙁнакъ]]
 
 [[Category:Гра́ди]]
 [[Category:Рѡсї]]
