*Empty MediaWiki Message*

--- a/Рѣꙁан҄ь.mw
+++ b/Рѣꙁан҄ь.mw
@@ -1,7 +1,7 @@
 {{Градъ|Имѧ = Рѣꙁан҄ь
 | знамѧ= Flag_of_Ryazan_(Ryazan_oblast).png
 | знакъ = Coat_of_Arms_of_Ryazan_small.png
-| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсїꙗ
+| Дрьжава = {{Рѡсїѩ знамѧ}}Рѡсїꙗ́
 | Глава =
 | Людии = 515,9 тꙑсѧщь
 | Основанъ = 1095
@@ -9,7 +9,7 @@
 '''Рѣꙁан҄ь''' ({{Lang-ru| Рязань}}, словѣньскоѥ имѧ єтѷмологїѥѭ въсъꙁьдано от имєнє *Рѣꙁанъ "дѣтѧ рѣꙁано иꙁ матєрина ѫтра" ѥстъ) [[Рѣзан҄ьска область|Рѣꙁан҄ьскꙑ области]] главьнъ градъ ѥстъ. Основанъ лѣта 1095 ѥстъ. Нарєкомꙑи Пєрєѩславл҄ь Рѣꙁан҄ьскъ до лѣта [[1778]] бѣ. Построѥнъ ѥстъ рѣцѣ [[Ока (рѣка)|Оцѣ]]. Людии обитаѥтъ 515,9 тꙑсѫщь.
 
 [[Катигорі́ꙗ:Гра́ди]]
-[[Катигорі́ꙗ:Рѡсї]]
+[[Катигорі́ꙗ:Рѡсїꙗ́]]
 
 [[ar:ريازان]]
 [[bg:Рязан]]
