*Empty MediaWiki Message*

--- a/Рѣꙁан҄ь.mw
+++ b/Рѣꙁан҄ь.mw
@@ -9,7 +9,7 @@
 '''Рѣꙁан҄ь''' ({{Lang-ru| Рязань}}, словѣньскоѥ имѧ єтѷмологїѥѭ въсъꙁьдано от имєнє *Рѣꙁанъ "дѣтѧ рѣꙁано иꙁ матєрина ѫтра" ѥстъ) [[Рѣзан҄ьска область|Рѣꙁан҄ьскꙑ области]] главьнъ градъ ѥстъ. Основанъ лѣта 1095 ѥстъ. Нарєкомꙑи Пєрєѩславл҄ь Рѣꙁан҄ьскъ до лѣта [[1778]] бѣ. Построѥнъ ѥстъ рѣцѣ [[Ока (рѣка)|Оцѣ]]. Людии обитаѥтъ 515,9 тꙑсѫщь.
 
 [[Катигорі́ꙗ:Гра́ди]]
-[[Катигорі́ꙗ:Рѡсїꙗ́]]
+[[Катигорі́ꙗ:Рѡсі́ꙗ]]
 
 [[ar:ريازان]]
 [[bg:Рязан]]
