*Empty MediaWiki Message*

--- a/Томьска_область.mw
+++ b/Томьска_область.mw
@@ -1,7 +1,7 @@
-[[Видъ:TomskOblastFlag.png|thumb|right|275px|Томьскы области знамѧ]]
-'''Томьска область''' [[Рѡсї|Рѡсїѩ]] область ѥстъ. Главьнъ градъ Томьскы области [[Томьскъ]] ѥстъ. Людии 1 леѡдръ обитаѥтъ. Въшьла бѣаше въ съставъ Новосибирьскы области. Послѣди лѣта 1944 аѵгѹста 13 числа самостотел҄ьна область сътворѥна ѥстъ.
+[[Дѣ́ло:TomskOblastFlag.png|thumb|right|275px|Томьскꙑ области ꙁнамѧ]]
+'''Томьска область''' [[Рѡсї|Рѡсїѩ]] область ѥстъ. Главьнъ градъ Томьскꙑ области [[Томьскъ]] ѥстъ. Людии 1 лєѡдръ обитаѥтъ. Въшьла бѣашє въ съставъ Новосибирьскꙑ области. Послѣди лѣта 1944 аѵгоуста 13 числа самостоꙗтєл҄ьна область сътворѥна ѥстъ.
 
-[[Category:Рѡсї]]
+[[Category:Рѡсі́ꙗ]]
 
 [[af:Tomsk (oblast)]]
 [[ar:تومسك أوبلاست]]
