*Empty MediaWiki Message*

--- a/Пльсковъ_·_Блъгарїи.mw
+++ b/Пльсковъ_·_Блъгарїи.mw
@@ -5,17 +5,16 @@
 | знамѧ= 
 | знакъ = 
 | Дрьжава = {{Блъгарїѩ знамѧ}} [[Блъгарі́ꙗ]]
-| Глава = 
+| Глава =
 | Людии = 1094
-| Основанъ = 
+| Основанъ =
 | Харта = [[Ви́дъ:Karta Pliska.png]]
 |}}
-'''Пльсковъ''' ({{lang-bg|Плиска}}) [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[гра́дъ]] ѥ́стъ ⁙ [[Блъгарьскоѥ цѣсарьство|Блъгарьска цѣсарьства]] прьвыи [[Сто́льнъ гра́дъ|стольнъ градъ]]. Люди́и обита́ѥтъ 1 тысѫщѧ.
+'''Пльсковъ''' ({{lang-bg|Плиска}}) [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[гра́дъ]] ѥ́стъ ⁙ [[Блъгарьскоѥ цѣсарьство|Блъгарьска цѣсарьства]] прьвꙑи [[Сто́льнъ гра́дъ|стольнъ градъ]]. Люди́и обита́ѥтъ 1 тꙑсѫщѧ.
 
 [[Ви́дъ:Old Basilica in Pliska.jpg|thumb|right|200px]]
 
 {{Блъгарі́ѩ гра́ди}}
-{{Шоумєнскы области гради}}
 
 [[bg:Плиска]]
 [[cy:Pliska]]
