--- a/Пльсковъ.mw
+++ b/Пльсковъ.mw
@@ -1,7 +1,7 @@
 {{Образьць:Мъногосъмыслиѥ}}
 
-'''Пльсковъ''' инѣхъ словѣньскъ градъ имѧ ѥстъ. Томѹ виждь:
-<br>
-[[Пльсковъ (Рѡсїи)|Пльсковъ]] иже [[Рѡсі́ꙗ|Рѡсїи]] градъ ѥстъ.
-<br>
-[[Пльсковъ (Блъгарїи)|Пльсковъ]] иже [[Блъгарї|Блъгарїи]] градъ ѥстъ, давѣ бывыи ѥѩ прьвыи стольнъ градъ.
+'''Пльсковъ''' инѣхъ словѣньскъ градъ имѧ ѥстъ. Томоу виждь:
+<br />
+[[Пльсковъ (Рѡсїи)|Пльсковъ]] ижє [[Рѡсі́ꙗ|Рѡсїи]] градъ ѥстъ.
+<br />
+[[Пльсковъ (Блъгарі́ꙗ)|Пльсковъ]] ижє [[Блъгарі́ꙗ|Блъгарїи]] градъ ѥстъ, давѣ бꙑвꙑи ѥѩ прьвꙑи стольнъ градъ.
