*Empty MediaWiki Message*

--- a/Китъ.mw
+++ b/Китъ.mw
@@ -1,5 +1,5 @@
-[[Image:Humpback stellwagen edit.jpg|thumb|Китъ]]
-'''Китъ''' ѥстъ великъ звѣрь морьскъ.
+[[Дѣ́ло:Humpback stellwagen edit.jpg|thumb|Китъ]]
+'''Китъ''' ѥстъ вєликъ ꙁвѣрь [[Морє|морьскъ]].
 
 [[Category:Ꙁвѣриѥ́]]
 
