*Empty MediaWiki Message*

--- a/Канъ_Кроумъ.mw
+++ b/Канъ_Кроумъ.mw
@@ -1,5 +1,5 @@
 [[Ви́дъ:Krum1.jpg|thumb]]
-'''Ка́нъ Кроу́мъ''' (796 - апрїлїꙗ 13 число 814 лѣ́та) · рєкомꙑи Вєликꙑи · блъга́рьскъ ка́нъ о 803 лѣ́та до 814 лѣ́та бѣ 
+'''Ка́нъ Кроу́мъ''' (796 - апрїлїꙗ 13 число 814 лѣ́та) · рєкомꙑи Вєликꙑи · [[Блъгарі́ꙗ|блъга́рьскъ]] ка́нъ о 803 лѣ́та до 814 лѣ́та бѣ 
 {{commonscat|Krum of Bulgaria}}
 [[Category:Блъгарі́ꙗ]]
 
