*Empty MediaWiki Message*

--- a/Соумь.mw
+++ b/Соумь.mw
@@ -1,15 +1,15 @@
-{{Дрьжава|name = Сѹмь
+{{Дрьжава|name = Соумь
 | знамѧ= [[Видъ:Flag of Finland.svg|150px]]
 | знакъ = [[image:Coat of arms of Finland.svg|80px]]
 | map = LocationFinland.svg 
 | Стольнъ градъ = Хельсинки
-| Ѩзыкъ = [[Сѹ́мьскъ ѩꙁꙑ́къ|Сѹ́мьскъ]], [[Свє́ньскъ ѩꙁꙑ́къ|Свє́ньскъ]]
+| Ѩзыкъ = [[Соу́мьскъ ѩꙁꙑ́къ|Соу́мьскъ]], [[Свє́ньскъ ѩꙁꙑ́къ|Свє́ньскъ]]
 | Глава = 
 | area =
 |Людии = 5 219 732
 | Почѧта = 1917
 }}
-'''Сѹмь''' ([[cѹмьскъ ѩзыкъ|сѹмьскы]] ''Suomi'') [[Еѵрѡпа|Еѵрѡпы]] сѣвера дрьжава ѥстъ. Cтольнъ градъ [[Хельсинки]] ѥстъ. Сѹми людии 5 219 732 обитаѥтъ. Дрьжавьна ѩзыка Сѹми [[Свеньскъ ѩзыкъ|ѩзыкъ свеньскъ]] и [[Сѹмьскъ ѩзыкъ|ѩзыкъ сѹмьскъ]] ѥсте.
+'''Соумь''' ([[cѹмьскъ ѩзыкъ|соумьскꙑ]] ''Suomi'') [[Еѵрѡпа|єѵрѡпꙑ]] сѣвєра дрьжава ѥстъ. Cтольнъ градъ [[Хельсинки]] ѥстъ. Соуми людии 5 219 732 обитаѥтъ. Дрьжавьна ѩꙁꙑка Соуми [[Свеньскъ ѩзыкъ|ѩꙁꙑкъ свєньскъ]] и [[Сѹмьскъ ѩзыкъ|ѩꙁꙑкъ соумьскъ]] ѥстє.
 
 {{commonscat|Finland}}
 
