--- a/Свєньскъ_ѩꙁꙑкъ.mw
+++ b/Свєньскъ_ѩꙁꙑкъ.mw
@@ -1,4 +1,4 @@
-'''Свєньскъ ѩꙁꙑ́къ''' (свєньскꙑ: ''svenskt språk'' или ''svenska'') дрьжавьнъ ѩꙁꙑ́къ [[Свє́ньска]] кралѥвьства ѥстъ. Симъ ѩꙁꙑ́комъ 9 лѡдръ людии глаголѣтъ.
+'''Свєньскъ ѩꙁꙑ́къ''' (свєньскꙑ: ''svenskt språk'' или ''svenska'') дрьжавьнъ ѩꙁꙑ́къ [[Свє́ньско|Свє́ньска]] кралѥвьства ѥстъ. Симъ ѩꙁꙑ́комъ 9 лѡдръ людии глаголѣтъ.
 
 ==Свєньска [[аꙁъбѹкꙑ]] ==
 <div style="margin: 4px;padding: 4px;width:40%;border:solid #999 1px;background:#F8F8F8;margin:0.5em auto; text-align: center;">
