русская и английская википедия

--- a/Рѡсїꙗ.mw
+++ b/Рѡсїꙗ.mw
@@ -7,7 +7,7 @@
 | Глава = [[Дими́трїи Мєдвѣ́дєвъ]]
 | Пространиѥ = 17 075 400 к҃м²
 | Людии = 142,2 лєѡ́дръ
-| Почѧта = <!--862 лѣто · ꙗко лѣтописи пьсано ѥ́стъ--> 1917 · ꙗко Рѡсі́иска Съвѣ́тска Съвѫ́ꙁьна Социалистичьска Димократі́ꙗ
+| Почѧта = 862 лѣто · ꙗко лѣтописи пьсано ѥ́стъ
 }}
 '''Рѡсі́ꙗ''' и {{lang-ru|Россия}} · равьноправьно и́мѧ '''Рѡсі́искꙑи Съвѫ́ꙁъ''' и {{Lang-ru|Российская Федерация}} · [[Єѵрѡ́па|Єѵрѡ́пꙑ]] въсто́ка и [[Асі́ꙗ|Асі́ѩ]] сѣ́вєра наибо́л҄ьшиꙗ свѣ́та дрьжа́ва ѥ́стъ ⁙ Рѡсі́ѩ сто́льнъ гра́дъ [[Москъва́]] ѥ́стъ ⁙ Наибо́л҄ьша града [[Москъва́]] и [[Санкт-Пєтєрбоу́ргъ]] ѥ́стє ⁙ Дрьжа́вьнъ [[роу́сьскъ ѩꙁꙑ́къ]] ѥ́стъ ⁙ Люди́и 142,2 лєѡ́дръ обита́ѥтъ
 
