--- a/Придънѣстриѥ.mw
+++ b/Придънѣстриѥ.mw
@@ -1,16 +1,19 @@
-{{Дрьжава|name = Придънѣстриѥ
+{{Дрьжава
+| name = Придънѣстриѥ
 | знамѧ= [[Видъ:Flag_of_Moldavian_SSR.svg‎ |150px]]
 | знакъ = [[Видъ:Transnistria-coa.png|80px]]
 | map = TransnistrieLocatie.png
 | Стольнъ градъ = [[Тирасполь]]
-| Ѩзыкъ = [[Роусьскъ ѩзыкъ|роусьскъ]] 
+| Ѩзыкъ = [[роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]], [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]], [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]]
 | Глава = [[Игорь Смирновъ]]
-| area =
-| Людии = 533 500
-| Гроши = Приднестровский рубль
+| Пространиѥ = 4 163 к҃м²
+| Людии = 533 500 лєѡ́дръ
+| Гроши = Придънѣ́стрїискъ роубль
 }}
 
-'''Придънѣ́стриѥ''', ({{lang-ru|Приднестро́вская Молда́вская Респу́блика, ПМР}}) — нєпринятая дєржава на юго-въсточной європє єсть.
+'''Придънѣ́стриѥ''', ({{lang-ru|Приднестро́вская Молда́вская Респу́блика, ПМР}}) въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ · Дрьжавьна ѩꙁꙑ́ка Придънѣ́стриѩ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]], [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] ѥстє.
+
+[[Катигорі́ꙗ:Дрьжа́вꙑ]]
 
 [[ar:ترانسنيستريا]]
 [[ast:Transnistria]]
