*Empty MediaWiki Message*

--- a/Придънѣстриѥ.mw
+++ b/Придънѣстриѥ.mw
@@ -11,7 +11,7 @@
 | Гроши = Придънѣ́стрїискъ роубль
 }}
 
-'''Придънѣ́стриѥ''', ({{lang-ru|Приднестро́вская Молда́вская Респу́блика, ПМР}}) въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ · Дрьжавьна ѩꙁꙑ́ка Придънѣ́стриѩ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]], [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] ѥстє.
+'''Придънѣ́стриѥ''', ({{lang-ru|Приднестро́вская Молда́вская Респу́блика, ПМР}}) въсточьнꙑѩ [[Єѵрѡ́па|Єѵрѡ́пꙑ]] нєпри́ꙁнана дрьжа́ва въ [[Молдо́ва|Молдо́вѣ]] ѥ́стъ · Cто́льнъ гра́дъ [[Тира́споль]] ѥ́стъ · Дрьжавьна ѩꙁꙑ́ка Придънѣ́стриѩ [[молдо́вьскъ ѩꙁꙑ́къ|молдо́вьскъ]], [[оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[роу́сьскъ ѩꙁꙑ́къ]] ѥстє.
 
 [[Катигорі́ꙗ:Дрьжа́вꙑ]]
 
