--- a/Роусьскъ_ѩꙁꙑкъ.mw
+++ b/Роусьскъ_ѩꙁꙑкъ.mw
@@ -1,5 +1,5 @@
 [[Видъ:RussianLanguageMap.png|thumb|Роу́сьскаѥго ѩꙁꙑка́ просто́ръ]]
-'''Роу́сьскъ ѩꙁꙑ́къ''' · {{lat-ga|русский язык}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]] и [[Бѣла́ Роу́сь|Бѣлꙑ́ Роу́си]] дрьжа́вьнъ ѩꙁꙑ́къ ѥ́стъ⁙ [[Дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|Дрє́вл҄ьнꙗ роу́сьскаѥго ѩꙁꙑка́]] сꙑновл҄ь ѩꙁꙑ́къ ѥ́стъ · и́ꙁъ ѥго́ жє [[Оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[Бѣлороу́сьскъ ѩꙁꙑ́къ|бѣлороу́сьскъ]] ѩꙁꙑ́ка ишьла ѥ́стє ⁙ Глаго́лѭщь люди́и мє́ждоу 300 и 350 лєѡ́дръ сѫ́тъ ⁙ Ѥди́нъ и шєсти єпїсимьнъ и дѣ́льнъ ѩꙁꙑ́къ [[Ѥдьнѥнъ народъ съвѣтъ|ѤН҃С]] ѥ́стъ
+'''Роу́сьскъ ѩꙁꙑ́къ''' · {{lat-ga|русский язык}} · [[Рѡсі́ꙗ|Рѡсі́ѩ]], [[Бѣла́ Роу́сь|Бѣлꙑ́ Роу́си]] и [[Придънѣ́стриѥ]] дрьжа́вьнъ ѩꙁꙑ́къ ѥ́стъ⁙ [[Дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|Дрє́вл҄ьнꙗ роу́сьскаѥго ѩꙁꙑка́]] сꙑновл҄ь ѩꙁꙑ́къ ѥ́стъ · и́ꙁъ ѥго́ жє [[Оукра́иньскъ ѩꙁꙑ́къ|оукра́иньскъ]] и [[Бѣлороу́сьскъ ѩꙁꙑ́къ|бѣлороу́сьскъ]] ѩꙁꙑ́ка ишьла ѥ́стє ⁙ Глаго́лѭщь люди́и мє́ждоу 300 и 350 лєѡ́дръ сѫ́тъ ⁙ Ѥди́нъ и шєсти єпїсимьнъ и дѣ́льнъ ѩꙁꙑ́къ [[Ѥдьнѥнъ народъ съвѣтъ|ѤН҃С]] ѥ́стъ
 == Роу́сьска а́ꙁъбоукꙑ  ==
 
 Роу́сьска гражда́ньска а́ꙁъбоукꙑ сътворѥна́ [[Климє́нтовица|климє́нтовицѧ]] осно́вѣ цѣ́сарѥмь [[Пє́тръ Вєли́кꙑи|Пєтро́мь А҃]] ѥ́стъ
