*Empty MediaWiki Message*

--- a/Оукраиньскъ_ѩꙁꙑкъ.mw
+++ b/Оукраиньскъ_ѩꙁꙑкъ.mw
@@ -1,41 +1,41 @@
-'''Оукра́иньскъ ѩꙁꙑ́къ''' и оукра́иньскꙑ  {{lat-ga|''українська мова''}} · въсточьнословѣньска иꙁво́да словѣ́ньска дрѣвєсє ѩꙁꙑ́къ ѥ́стъ ⁙ [[дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|дрє́вл҄ьнѥроусьска ѩꙁꙑка́]] сꙑновл҄ии ѩꙁꙑ́къ ѥ́стъ · иꙁъ ѥгожє [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] и [[Бѣлороу́сьскъ ѩꙁꙑ́къ|бѣлороу́сьскъ]] ѩꙁъка ишла ѥ́стє ⁙ [[Оукра́ина|Оукра́инꙑ]] дрьжа́вьнъ ѩꙁꙑ́къ ѥ́стъ ⁙ глаго́лѭщь с҄имь ѩꙁꙑко́мь люди́и 40 лєѡ́дръ сѫ́тъ
-== Оукра́иньска а́ꙁъбоукꙑ  ==
+'''Оукра́иньскъ ѩꙁꙑ́къ''' и оукра́иньскꙑ {{lat-ga|''українська мова''}} · въсточьнословѣньска иꙁво́да словѣ́ньска дрѣвєсє ѩꙁꙑ́къ ѥ́стъ ⁙ [[дрє́вл҄ьн҄ь роу́сьскъ ѩꙁꙑ́къ|дрє́вл҄ьнѥроусьска ѩꙁꙑка́]] сꙑновл҄ии ѩꙁꙑ́къ ѥ́стъ · иꙁъ ѥгожє [[Роу́сьскъ ѩꙁꙑ́къ|роу́сьскъ]] и [[Бѣлороу́сьскъ ѩꙁꙑ́къ|бѣлороу́сьскъ]] ѩꙁъка ишла ѥ́стє ⁙ [[Оукра́ина|Оукра́инꙑ]] дрьжа́вьнъ ѩꙁꙑ́къ ѥ́стъ ⁙ глаго́лѭщь с҄имь ѩꙁꙑко́мь люди́и 40 лєѡ́дръ сѫ́тъ
+== Оукра́иньска а́ꙁъбоукꙑ ==
 {|cellSpacing="0" cellPadding="0" border="1" style="text-align: center"
 !Боу́кꙑ!!И́мѧ!!Ꙁвѫ́къ!!Боу́кꙑ!!И́мѧ!!Ꙁвѫ́къ
 |-
-| {{lat-ga|А а}} || {{lat-ga|а}} /a/ || /a/ || Н н || ен /en/ || /n/
+| {{lat-ga|А а}} || {{lat-ga|а}} /a/ || /a/ || Н н || єн /en/ || /n/
 |-
-| Б б || бе /be/ || /b/ || О о || о /o/ || /o/
+| Б б || бє /be/ || /b/ || О о || о /o/ || /o/
 |-
-| В в || ве /ve/ || /v/, /w/ || П п || пе /pe/ || /p/
+| В в || вє /ve/ || /v/, /w/ || П п || пє /pe/ || /p/
 |-
-| Г г || ге /&#614;e/ || /&#614;/ || Р р || ер /er/ || /r/
+| Г г || гє /ɦe/ || /ɦ/ || Р р || єр /er/ || /r/
 |-
-| Ґ ґ || ґе /ge/ || /g/ || С с || ес /es/ || /s/
+| Ґ ґ || ґє /ge/ || /g/ || С с || єс /es/ || /s/
 |-
-| Д д || де /de/ || /d/ || Т т || те /te/ || /t/
+| Д д || дє /de/ || /d/ || Т т || тє /te/ || /t/
 |-
 | {{lat-ga|Е е}} || {{lat-ga|е /e/}} || /e/ || У у || у /u/ || /u/
 |-
-| Є є || є /je/ || /je/, /ʲe/ || Ф ф || еф /ef/ || /f/
+| Є є || є /je/ || /je/, /ʲe/ || Ф ф || єф /ef/ || /f/
 |-
-| Ж ж || же /&#658;e/ || /&#658;/ || Х х || ха /xa/ || /x/
+| Ж ж || жє /ʒe/ || /ʒ/ || Х х || ха /xa/ || /x/
 |-
-| {{lat-ga|З з}} || {{lat-ga|зе /ze/}} || /z/ || Ц ц || це /&#x02a6;e/ || /&#x02a6;/
+| {{lat-ga|З з}} || {{lat-ga|зе /ze/}} || /z/ || Ц ц || цє /ʦe/ || /ʦ/
 |-
-| И и || и /&#618;/ || /&#618;/ || Ч ч || че /&#679;e/ || /&#679;/
+| И и || и /ɪ/ || /ɪ/ || Ч ч || чє /ʧe/ || /ʧ/
 |-
-| І і || і /i/ || /i/ || Ш ш || ша /&#643;a/ || /&#643;/
+| І і || і /i/ || /i/ || Ш ш || ша /ʃa/ || /ʃ/
 |-
-| Ї ї || ї /ji/ || /ji/ || Щ щ || ща /&#643;&#679;a/ ||/ʃʧ/
+| Ї ї || ї /ji/ || /ji/ || Щ щ || ща /ʃʧa/ ||/ʃʧ/
 |-
-| Й й || ий /&#618;j/,<br />йот /jot/ || /j/ || Ь ь || м’який знак <br />/mja&#712;k&#618;j znak/ || /ʲ/
+| Й й || ий /ɪj/,<br />йот /jot/ || /j/ || Ь ь || м’який ꙁнак <br />/mjaˈkɪj znak/ || /ʲ/
 |-
 | К к || ка /ka/ || /k/ || Ю ю || ю /ju/ || /ju/, /ʲu/
 |-
-| Л л || ел /el/ || /l/ || {{lat-ga|Я я}} || {{lat-ga|я /ja/}} || /ja/, /ʲa/
+| Л л || єл /el/ || /l/ || {{lat-ga|Я я}} || {{lat-ga|я /ja/}} || /ja/, /ʲa/
 |-
-| М м || ем /em/ || /m/
+| М м || єм /em/ || /m/
 |}
 
 == ꙁьри́ та́кождє ==
