--- a/Сакаръ_·_гора.mw
+++ b/Сакаръ_·_гора.mw
@@ -1,4 +1,5 @@
-{{delete|Слишком короткая}}
-
-Сакар гора Блъгарї ?есть (1500 м- Богдан).
-[[Катигорї:Блъгарї]]
+{{coord|41|59|N|26|16|E|region:BG_type:mountain|display=title}}
+[[Дѣ́ло:Sakar.jpg|thumb]]
+'''Сакаръ''' и {{lang-bg|Сакар}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] Хасковьскꙑ области гора ѥ́стъ ⁙ Ѥѩ вꙑсота 856 [[мє́тро|м҃]] ѥ́стъ
+[[Катигорі́ꙗ:Блъгарі́ꙗ]]
+[[bg:Сакар]]
