*Empty MediaWiki Message*

--- a/Отєшєво.mw
+++ b/Отєшєво.mw
@@ -1,3 +1,4 @@
+{{delete|Слишком коротко}}
 '''Отешево''' село [[Ресьньска обьщина|Ресьньсцѣи обьщинѣ]] [[Македонї|Македонїи]] ѥстъ.
  
 [[Category:Села]]
