--- a/Тошѧ_Проѥвьскꙑи.mw
+++ b/Тошѧ_Проѥвьскꙑи.mw
@@ -1,8 +1,6 @@
-'''Тошѧ Проѥвьскыи''' ({{lang-mk|Тоше Проески}}, исто имѧ '''Ѳеодѡръ Проѥвьскыи''', {{lang-mk|Тодор Проески}} ѥстъ. нѹарї 25 дьне 1981 — октѡврї 16 дьне 2007) великъ македоньскъ пѣвьць бѣаше. Мъноѕи мыслѧтъ ко наибол҄ии пѣвьць междоу дрьжавъ по давьн҄ии [[Югославїꙗ|Югославїи]] бѣ. Рожденъ [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Македонїи]] бѣ. Своѥ пѣвьчьство лѣта 1997 почѧ, о тѣхъ поръ 13 дїскы съ моусїкоѭ издалъ бѣ. Избьранъ лѣта 2004 добры волѩ посълъ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] бѣ и того дѣл напьса ѥи епїсимьнѫѭ пѣснь «За овој свет» ([[Словѣньскъ ѩзыкъ|словѣньскы]]: ''За сь свѣтъ'', {{lang-en|This World}}). Посъланъ о Македонїѩ тогожде лѣта на Еѵрѡпьско пѣвьчьско рьвьниѥ [[Еѵрѡвидениѥ]] бѣ. Погынѫлъ напрасно [[Хръватьска|Хръватьсцѣ]] зълѣ аѵтокїнитьнѣ приключаи ѥстъ.
+'''Тошѧ Проѥвьскꙑи''' ({{lang-mk|Тоше Проески}}, исто имѧ '''Ѳєодѡръ Проѥвьскꙑи''', {{lang-mk|Тодор Проески}} ѥстъ. ꙗноуарїꙗ 25 дьнє 1981 — октѡврїꙗ 16 дьнє 2007) вєликъ макєдоньскъ пѣвьць бѣашє. Мъноꙃи мꙑслѧтъ ꙗко наибол҄ии пѣвьць мєждоу дрьжавъ по давьн҄ии [[Югославїꙗ|Югославїи]] бѣ. Рождєнъ [[Прилѣпъ|Прилѣпѣ]], [[Македонї|Макєдонїи]] бѣ. Своѥ пѣвьчьство лѣта 1997 почѧ, о тѣхъ поръ 13 дїскꙑ съ моусїкоѭ иꙁдалъ бѣ. Иꙁбьранъ лѣта 2004 добрꙑ волѩ посълъ [[Ѥдинѥнъ народъ съвѣта дѣтьска чѧсть|ѤНСД҃Ч]] бѣ и того дѣлꙗ напьса ѥи єпїсимьнѫѭ пѣснь "ꙁа овој свєт" ([[Словѣньскъ ѩзыкъ|словѣньскꙑ]]: ''ꙁа сь свѣтъ'', {{lang-en|This World}}). Посъланъ о Макєдонїѩ тогождє лѣта на єѵрѡпьско пѣвьчьско рьвьниѥ [[Еѵрѡвидениѥ]] бѣ. Погꙑнѫлъ напрасно [[Хръватьска|Хръватьсцѣ]] ꙁълѣ аѵтокїнитьнѣ приключаи ѥстъ.
 
-
-
-[[Катигорі́ꙗ:Макєдоні́ꙗ]] [[Катигорі́ꙗ:Пѣвьци]]
+[[Category:Лю́диѥ]]
 
 [[az:Toşe Proeski]]
 [[bat-smg:Toše Proeski]]
