*Empty MediaWiki Message*

--- a/Православиѥ.mw
+++ b/Православиѥ.mw
@@ -19,13 +19,13 @@
 
 == ꙁьри́ та́кождє ==
 {{Commonscat|Orthodox Church}}
-* [[Хрїстїа́ньство]]
+* [[Хрїстїаньство]]
 * [[Ри́мьскъ Каѳолїкїсмъ]]
 * [[Папобо́рьчьска Вѣ́ра]]
 * [[О́тьчє на́шь]]
 
 
-[[Category:Хрїстїа́ньство]]
+[[Category:Хрїстїаньство]]
 
 [[ar:أرثوذكسية شرقية]]
 [[ast:Ilesia Ortodoxa]]
