*Empty MediaWiki Message*

--- a/Отєшєво.mw
+++ b/Отєшєво.mw
@@ -1,4 +1,16 @@
-{{delete|Слишком коротко}}
-'''Отешево''' село [[Ресьньска обьщина|Ресьньсцѣи обьщинѣ]] [[Македонї|Македонїи]] ѥстъ.
+{{coord|display=title|40|58|59|N|20|55|0|E|type:city}}
+{{Селѥниѥ
+| Имѧ = Отєшєво
+| Тѷпъ = сєло́
+| знамѧ= 
+| знакъ = 
+| Дрьжава = {{Македонїѩ знамѧ}} [[Макєдоні́ꙗ]]
+| Глава =
+| Людии = 0
+| Основанъ =
+| Харта =
+}}
+'''Отєшєво''' и {{lang-mk|Отешево}} · [[Макєдоні́ꙗ|Макєдоні́ѩ]] Рєсьньскꙑ обьщинꙑ сєло́ ѥ́стъ ⁙ Ꙁьдано Прѣспаньскꙑ ѥꙁєрѣ ѥ́стъ ⁙ Нꙑнѣ Отєшєвѣ люди́и нѣстъ
  
-[[Category:Села]]
+[[Category:Макєдоні́ꙗ]]
+[[mk:Отешево]]
