*Empty MediaWiki Message*

--- a/Съкопиѥ.mw
+++ b/Съкопиѥ.mw
@@ -1,17 +1,17 @@
 {{Градъ|Имѧ = Съкопиѥ
 | знамѧ= Flag of Skopje.png
 | знакъ =
-| Дрьжава ={{Македонїѩ знамѧ}} Македонї
-| Глава = 
-| Людии = 521 569  
+| Дрьжава ={{Македонїѩ знамѧ}} Макєдонїꙗ
+| Глава =
+| Людии = 521 569
 | Основанъ = лѣта 3500 до х҃р
-| Харта = [[Видъ:MKD muni nonn(Skopje).png|200px]]
+| Харта = [[Дѣ́ло:MKD muni nonn(Skopje).png|200px]]
 }}
-'''Съкопиѥ''' ({{lang-mk|Скопје}}) градъ рѣцѣ съ именьмъ [[Вардаръ]] ѥстъ · [[Макєдоні́ꙗ|Македонїѩ]] стольнъ градъ ѥстъ ⁙ Людии обитаѥтъ ф҃ка (521) тысѧщѧ ⁙ Основанъ лѣта ҂з҃ф (3500) до х҃р ѥстъ
+'''Съкопиѥ''' ({{lang-mk|Скопје}}) градъ рѣцѣ съ имєньмъ [[Вардаръ]] ѥстъ · [[Макєдоні́ꙗ|Макєдонїѩ]] стольнъ градъ ѥстъ ⁙ Людии обитаѥтъ ф҃ка (521) тꙑсѧщѧ ⁙ Основанъ лѣта ҂ꙁ҃ф (3500) до х҃р ѥстъ
 
-Съкопиѥ древльн҄ь [[стольнъ градъ]] [[Срь́бїꙗ|Срьбїѩ]] бѣаше
+Съкопиѥ дрєвльн҄ь [[стольнъ градъ]] [[Срь́бїꙗ|Срьбїѩ]] бѣашє
 
-== Зьри такожде ==
+== ꙁьри такождє ==
 
 {{Commonscat|Skopje}}
 {{Македонїѩ гради}}
