*Empty MediaWiki Message*

--- a/Сакаръ_·_гора.mw
+++ b/Сакаръ_·_гора.mw
@@ -2,4 +2,10 @@
 [[Дѣ́ло:Sakar.jpg|thumb]]
 '''Сакаръ''' и {{lang-bg|Сакар}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] Хасковьскꙑ области гора ѥ́стъ ⁙ Ѥѩ вꙑсота 856 [[мє́тро|м҃]] ѥ́стъ
 [[Катигорі́ꙗ:Блъгарі́ꙗ]]
+
 [[bg:Сакар]]
+[[de:Sakar]]
+[[en:Sakar Mountain]]
+[[new:साकार]]
+[[nn:Sakar]]
+[[pl:Sakar]]
