*Empty MediaWiki Message*

--- a/Сѣръ.mw
+++ b/Сѣръ.mw
@@ -1,5 +1,20 @@
-{{delete|Слишком короткая}}
+{{coord|display=title|41|05||N|23|33||E|type:city}}
+{{Селѥниѥ|Имѧ = Сѣ́ръ
+|Тѷпъ = гра́дъ
+| знамѧ= 
+| знакъ =
+| Дрьжава = {{Грькъ знамѧ}} Грьци
+| Глава = 
+| Людии = 54 266
+| Основанъ = Ꙃ҃ вѣкъ до Р҃Х
+| Харта = 
+|}}
+'''Сѣ́ръ''' и {{lang-el|Σέρρες}} · [[Грьци|Грь́къ]] Срѣдьнѩ Макєдоні́ѩ Сѣрьска нома гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 54 тꙑсѫщи
 
-'''Сєрєꙁъ''' ѥстъ градъ [[Грьци|Грьцѣхъ]].
+== їсторі́ꙗ ==
 
-[[Катигорі́ꙗ:Гра́ди]]
+Почѧтъ Ꙃ҃ вѣцѣ до Р҃Х ѥ́стъ ⁙ Д҃І вѣцѣ въшьлъ съставъ Осьманьскꙑ аѵтократорі́ѩ бѣ
+
+[[Катигорі́ꙗ:Грь́къ гра́ди]]
+[[bg:Сяр]]
+[[ru:Серре (город)]]
