*Empty MediaWiki Message*

--- a/Сѣръ.mw
+++ b/Сѣръ.mw
@@ -9,12 +9,15 @@
 | Основанъ = Ꙃ҃ вѣкъ до Р҃Х
 | Харта = 
 |}}
+[[Дѣ́ло:Serres overview.jpg|thumb|left]]
 '''Сѣ́ръ''' и {{lang-el|Σέρρες}} · [[Грьци|Грь́къ]] Срѣдьнѩ Макєдоні́ѩ Сѣрьска нома гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обитаѥтъ 54 тꙑсѫщи
 
 == їсторі́ꙗ ==
 
 Почѧтъ Ꙃ҃ вѣцѣ до Р҃Х ѥ́стъ ⁙ Д҃І вѣцѣ въшьлъ съставъ Осьманьскꙑ аѵтократорі́ѩ бѣ
 
+== ꙁьри́ та́кождє ==
+{{commonscat|Serres, Greece}}
 [[Катигорі́ꙗ:Грь́къ гра́ди]]
 [[bg:Сяр]]
 [[ru:Серре (город)]]
