--- a/Аравьскъ_ѩꙁꙑкъ.mw
+++ b/Аравьскъ_ѩꙁꙑкъ.mw
@@ -45,7 +45,7 @@
 [[et:Araabia keel]]
 [[eu:Arabiera]]
 [[ext:Luenga árabi]]
-[[fa:زبان تازی]]
+[[fa:زبان عربی]]
 [[fi:Arabian kieli]]
 [[fo:Arabiskt (mál)]]
 [[fr:Arabe (langue)]]
