*Empty MediaWiki Message*

--- a/Ꙁагрєбъ.mw
+++ b/Ꙁагрєбъ.mw
@@ -1,20 +1,23 @@
-{{Градъ|Имѧ = Загребъ
+{{coord|display=title|45|48||N|15|57||E|type:city}}
+{{Градъ|Имѧ = Ꙁагрєбъ
+|Тѷпъ=гра́дъ
 | знамѧ= Zagreb zastava.gif
 | знакъ = Zagreb coa.gif
-| Дрьжава = {{Хръватьскы знамѧ}} [[Хръватьска]]
+| Дрьжава = {{Хръватьскы знамѧ}} [[Хръва́тьска]]
 | Глава = Миланъ Бандищь
 | Людии = 779145
 | Основанъ = 1094
-| Харта = [[Видъ:CroatiaGradZagreb.png|200px]]
+| Харта = [[Дѣ́ло:CroatiaGradZagreb.png|200px]]
 |}}
-'''Загребъ''' ({{lang-hr|Zagreb}}) [[Хръватьска|Хръватьскы]] [[стольнъ градъ]] ѥстъ. Загребѣ людии обитаѥтъ 779 145, построѥнъ рѣцѣ [[Сава|Савѣ]] ѥстъ. Загребъ основанъ ѥстъ 1094, градъ съ лѣта 1242 ѥстъ. Града имѧ Градьцъ бѣаше.
-[[Видъ:Zagrzeb stare miasto.jpg|thumb|left|Загреба видъ]]
+'''Ꙁагрєбъ''' и {{lang-hr|Zagreb}} · [[Хръва́тьска|Хръва́тьскꙑ]] [[сто́льнъ гра́дъ|сто́льнъ]] и набол҄ии гра́дъ ѥ́стъ ⁙ Ꙁагрєбѣ люди́и обита́ѥтъ 779 145 ⁙ Ꙁьданъ рѣцѣ [[Сава|Савѣ]] ѥ́стъ ⁙ Ꙁагрєбъ основанъ ѥ́стъ 1094 · гра́дъ съ лѣ́та 1242 ѥ́стъ ⁙ Гра́да и́мѧ Градьцъ бѣашє
+[[Дѣ́ло:Zagrzeb stare miasto.jpg|thumb|left|Ꙁагрєба видъ]]
+
+== ꙁьри́ та́кождє ==
 
 {{commonscat|Zagreb}}
-
-[[Катигорі́ꙗ:Гра́ди]]
-[[Катигорі́ꙗ:Стольни гради]]
-[[Катигорі́ꙗ:Хръва́тьска]]
+* [http://www.zagreb.hr/ Ꙁагрєбъ Мєждоусѣтии]
+[[Катигорі́ꙗ:Хръва́тьскꙑ гра́ди]]
+[[Катигорі́ꙗ:Сто́льни гра́ди]]
 
 {{Link FA|hr}}
 [[af:Zagreb]]
