*Empty MediaWiki Message*

--- a/Мѣнскъ.mw
+++ b/Мѣнскъ.mw
@@ -1,17 +1,18 @@
-{{Градъ|Имѧ = Мѣньскъ
+{{coord|display=title|53|55||N|27|33||E|type:city}}
+{{Градъ|Имѧ = Мѣ́ньскъ
+|Тѷпъ =
 | знамѧ= 
 | знакъ = Coat of Arms of Minsk, Belarus.png
-| Дрьжава = Бѣла Рѹсь
+| Дрьжава = {{Бѣлы Роуси знамѧ}} Бѣла́ Роу́сь
 | Глава = Михаилъ Павловъ
 | Людии =  
 | Основанъ = 1067
 | Харта = [[Видъ:Minsk-pos.jpg|200 px]]
 |}}
-'''Мѣньскъ''' ({{Lang-be|Менск, Мінск}}, {{Lang-ru|Минск}}) [[стольнъ градъ]] [[Бѣла Рѹсь|Бѣлы Рѹси]] ѥстъ. Глава Мѣньска [[Михаилъ Павловъ]] ѥстъ. Мѣньскъ градъ-ирѡи ѥстъ. На рѣцѣ [[Свислочь (рѣка)|Свислочи]] построѥнъ ѥстъ, помѣновенъ же запрьва лѣтописи лѣта 1067 ѥстъ.
+'''Мѣ́ньскъ''' и {{Lang-be|Менск, Мінск}} · {{Lang-ru|Минск}} · [[сто́льнъ гра́дъ]] [[Бѣла́ Роу́сь|Бѣлꙑ́ Роу́си]] ѥ́стъ ⁙ Глава Мѣ́ньска [[Михаилъ Павловъ]] ѥ́стъ ⁙ Мѣ́ньскъ ирѡи гра́дъ ѥ́стъ ⁙ На рѣцѣ [[Свислочь · рѣка́|Свислочи]] ꙁьданъ ѥ́стъ ⁙ Помѣновєнъ жє ꙁапрьва лѣтописи лѣта 1067 ѥ́стъ
 
-[[Катигорї:Гради]]
-[[Катигорї:Бѣла Рѹсь]]
-[[Category:Стольни гради]]
+[[Category:Бѣлꙑ́ Роуси́ гра́ди]]
+[[Category:Сто́льни гра́ди]]
 
 [[af:Minsk]]
 [[ar:مينسك]]
