*Empty MediaWiki Message*

--- a/Мѣнскъ.mw
+++ b/Мѣнскъ.mw
@@ -1,16 +1,19 @@
 {{coord|display=title|53|55||N|27|33||E|type:city}}
 {{Градъ|Имѧ = Мѣ́ньскъ
-|Тѷпъ =
-| знамѧ= 
+|Тѷпъ = гра́дъ
+| знамѧ= Flag of Minsk, Belarus.png
 | знакъ = Coat of Arms of Minsk, Belarus.png
 | Дрьжава = {{Бѣлы Роуси знамѧ}} Бѣла́ Роу́сь
 | Глава = Михаилъ Павловъ
-| Людии =  
+| Людии =  1 830 500
 | Основанъ = 1067
 | Харта = [[Видъ:Minsk-pos.jpg|200 px]]
 |}}
-'''Мѣ́ньскъ''' и {{Lang-be|Менск, Мінск}} · {{Lang-ru|Минск}} · [[сто́льнъ гра́дъ]] [[Бѣла́ Роу́сь|Бѣлꙑ́ Роу́си]] ѥ́стъ ⁙ Глава Мѣ́ньска [[Михаилъ Павловъ]] ѥ́стъ ⁙ Мѣ́ньскъ ирѡи гра́дъ ѥ́стъ ⁙ На рѣцѣ [[Свислочь · рѣка́|Свислочи]] ꙁьданъ ѥ́стъ ⁙ Помѣновєнъ жє ꙁапрьва лѣтописи лѣта 1067 ѥ́стъ
+'''Мѣ́ньскъ''' и {{Lang-be|Менск, Мінск}} · {{Lang-ru|Минск}} · [[сто́льнъ гра́дъ]] [[Бѣла́ Роу́сь|Бѣлꙑ́ Роу́си]] ѥ́стъ ⁙ Люди́и обита́ѥтъ 1 830 500 ⁙ Глава Мѣ́ньска [[Михаилъ Павловъ]] ѥ́стъ ⁙ Мѣ́ньскъ ирѡи гра́дъ ѥ́стъ ⁙ На рѣцѣ [[Свислочь · рѣка́|Свислочи]] ꙁьданъ ѥ́стъ ⁙ Помѣновєнъ жє ꙁапрьва лѣтописи лѣта 1067 ѥ́стъ
 
+== ꙁьри́ та́кождє ==
+{{commonscat|Minsk}}
+* [http://www.minsk.gov.by/ Мѣ́ньскъ Мєждоусѣтии]
 [[Category:Бѣлꙑ́ Роуси́ гра́ди]]
 [[Category:Сто́льни гра́ди]]
 
