*Empty MediaWiki Message*

--- a/Роусє.mw
+++ b/Роусє.mw
@@ -7,12 +7,13 @@
 | Основанъ = 
 | Харта =[[Видъ:Ruse location in Bulgaria.png|200px]]
 |}}
+{{Дроу́ꙃи съмꙑ́сли|}}
 [[Ви́дъ:Rousse-architecture4-library.jpg|thumb|left|⁖ Любєнъ Каравєловъ ⁖ вївлїоѳи́ка]]
 '''Роу́сє''' и {{lang-bg|Ру̀се}} · [[Блъгарі́ꙗ|Блъгарі́ѩ]] [[Роу́сєньска о́бласть|Роу́сєньскꙑ о́бласти]] гла́вьнъ гра́дъ ѥ́стъ ⁙ Люди́и обита́ѥтъ 178 тꙑ́сѫщь<ref>http://www.grao.government.bg/tna/tab02.txt</ref> ⁙ Ꙁьданъ рѣцѣ [[Доунавъ|Доунавѣ]] ѥ́стъ ⁙ 
 
 == ꙁьри́ та́кождє ==
 <references />
-* [[Роу́сє (Карпа́тьсци)]]
+
 
 {{commonscat|Rousse}}
 
