*Empty MediaWiki Message*

--- a/Люблꙗна.mw
+++ b/Люблꙗна.mw
@@ -1,3 +1,4 @@
+{{coord|display=title|46|03||N|14|31||E|type:city}}
 {{Градъ|Имѧ = Люблꙗ́на
 | знамѧ=
 | знакъ = Люблꙗны знакъ.png
@@ -13,7 +14,7 @@
 {{commonscat|Ljubljana}}
 
 [[Катигорі́ꙗ:Їллѷрі́искꙑ Словѣні́ѩ гра́ди]]
-[[Category:Стольни гради]]
+[[Category:Сто́льни гра́ди]]
 
 {{Link FA|bar}}
 
