--- a/Лєниноградьска_область.mw
+++ b/Лєниноградьска_область.mw
@@ -14,6 +14,8 @@
 * [[Сертолово]]
 * [[Лоу́га]]
 
+{{commonscat|Leningrad Oblast}}
+
 [[Category:Лениноградьска область|*]]
 
 [[ar:لينينغراد أوبلاست]]
