--- a/Москъвьска_область.mw
+++ b/Москъвьска_область.mw
@@ -1,7 +1,7 @@
 [[Дѣ́ло:Flag of Moscow Oblast.png|right|thumb|200px|Москъвьскꙑѩ области ꙁнамѧ]]
 '''Москъвьска область''' ({{lang-ru|Московская область}}) [[Рѡсі́ꙗ|Рѡсі́и]] ѥстъ, ѥѩжє главьнъ градъ [[Москъва]] ѥстъ. Почѧта ѥстъ лѣта 1929, бол҄ии градъ (по Москъвѣ) [[Балашиха]] ѥстъ.
 
-{{commons|Category:Moscow Oblast}}
+{{commonscat|Moscow Oblast}}
 
 [[Category:Рѡсі́ꙗ]]
 
