robot  Modifying: [[pl:Aleksander VI]]

--- a/Папєжь_Алєѯандръ_Ѕ҃.mw
+++ b/Папєжь_Алєѯандръ_Ѕ҃.mw
@@ -43,7 +43,7 @@
 [[nl:Paus Alexander VI]]
 [[no:Alexander VI]]
 [[oc:Alexandre VI]]
-[[pl:Papież Aleksander VI]]
+[[pl:Aleksander VI]]
 [[pt:Papa Alexandre VI]]
 [[ro:Papa Alexandru al VI-lea]]
 [[ru:Александр VI (папа римский)]]
