--- a/Свєрдловьска_область.mw
+++ b/Свєрдловьска_область.mw
@@ -1,6 +1,7 @@
 [[Видъ:Coat of Arms of Sverdlovsk oblast (2005).png|thumb|right|275px|Свердловьскы области знакъ]]
 '''Свердловьска область''' [[Рѡсі́ꙗ|Рѡсїѩ]] область ѥсть. Срьдьце Свердловьскы область [[Екатерїнбѹргъ]] ѥсть. Людии 4,5 леѡдръ обитаѥтъ. Сътворѥна ѥстъ лѣта 1934 їанѹарї 17 числа.
 
+{{Commonscat|Sverdlovsk Oblast}}
 [[Катигорі́ꙗ:Рѡсі́ꙗ]]
 
 [[ar:سفيردلوفسك أوبلاست]]
