--- a/Томьска_область.mw
+++ b/Томьска_область.mw
@@ -1,6 +1,7 @@
 [[Дѣ́ло:TomskOblastFlag.png|thumb|right|275px|Томьскꙑ области ꙁнамѧ]]
 '''Томьска область''' [[Рѡсі́ꙗ|Рѡсїѩ]] область ѥстъ. Главьнъ градъ Томьскꙑ области [[Томьскъ]] ѥстъ. Людии 1 лєѡдръ обитаѥтъ. Въшьла бѣашє въ съставъ Новосибирьскꙑ области. Послѣди лѣта 1944 аѵгоуста 13 числа самостоꙗтєл҄ьна область сътворѥна ѥстъ.
 
+{{Commonscat|Tomsk Oblast}}
 [[Category:Рѡсі́ꙗ]]
 
 [[af:Tomsk (oblast)]]
