The file [[:Image:Coat_of_arms_of_Eritrea.png]] has been removed, as it has been deleted by [[:commons:User:Maxim]]: ''[[commons:COM:FS|Missing essential information: source, license and/or permission]]''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Єрѷѳрїꙗ.mw
+++ b/Єрѷѳрїꙗ.mw
@@ -1,6 +1,6 @@
 {{Дрьжава|name = Єрѷѳрі́ꙗ<br>ሃገረ ኤርትራ<br>دولة إرتري<br>Stato dell'Eritrea
 | знамѧ= [[Видъ:Flag_of_Eritrea.svg|150px]]
-| знакъ = [[image:Coat_of_arms_of_Eritrea.png|80px]]
+| знакъ = 
 | map = LocationEritrea.svg 
 | Стольнъ градъ = [[Асмє́ра]]
 | Ѩзыкъ = [[тїгрїньскъ ѩзыкъ|тїгрїньскъ]] · [[Аравьскъ ѩзыкъ|аравьскъ]]  и [[италі́искъ ѩꙁꙑ́къ|италі́искъ]]
