--- a/Оулиꙗновьска_область.mw
+++ b/Оулиꙗновьска_область.mw
@@ -1,6 +1,9 @@
 [[Видъ:Flag of Ulyanovsk Oblast.png|right|thumb|150px|Оулиꙗновьскꙑѩ области ꙁна́мѧ]]
 '''Оулиꙗ́новьска о́бласть''' и {{Lang-ru|Ульяновская область}} · [[Рѡсі́ꙗ|Рѡсі́и]] ѥ́стъ · ѥѩжє гла́вьнъ гра́дъ [[Оулиꙗ́новьскъ]] ѥ́стъ ⁙ Люди́и обитаѥтъ 1,3 лєѡ́дръ ⁙ Почѧта ѥ́стъ лѣ́та 1943 ⁙ Бол҄ии гра́дъ по Оулиꙗ́новьска [[Дьмитровъградъ]] ѥ́стъ
 
+
+{{Commonscat|Ulyanovsk Oblast}}
+
 [[Катигорі́ꙗ:Рѡсі́ꙗ]]
 
 [[ar:أوليانوفسك أوبلاست]]
