*Empty MediaWiki Message*

--- a/Срьбїꙗ.mw
+++ b/Срьбїꙗ.mw
@@ -1,4 +1,4 @@
-{{Дрьжава|name = Срь́біꙗ димократі́ꙗ<br>{{lat-ga|Република Србија}}
+{{Дрьжава|name = Срь́бїꙗ Димократі́ꙗ<br>{{lat-ga|Република Србија}}
 | знамѧ= [[Видъ:Flag of Serbia.svg|150px]]
 | знакъ = [[image:Coat of arms of Serbia.svg|80px]]
 | map =Location_of_Serbia_in_Europe,_Kosovo_included.png 
@@ -9,7 +9,7 @@
 | Людии = 7 лєѡ́дръ
 | Почѧта = 2006
 }}
-'''Срь́бїꙗ''' и {{Lang-sr|Србија}} · єпі́симьно и́мѧ '''Срь́біꙗ димократі́ꙗ''' и {{Lang-sr|Република Србија}} · срѣдьн҄ии [[Балка́ни|Балка́нъ]] дрьжа́ва ѥ́стъ ⁙ Сто́льнъ [[Бѣ́лъ Гра́дъ · Срь́бїи)|Бѣ́лъ Гра́дъ]] ѥ́стъ ⁙ Дрьжа́вьнъ [[срь́бьскъ ѩꙁꙑ́къ|срь́бьскъ]] ѩꙁꙑ́къ ѥ́стъ ⁙ Люди́и 7 лєѡ́дръ обита́ѥтъ
+'''Срь́бїꙗ''' и {{Lang-sr|Србија}} · єпі́симьно и́мѧ '''Срь́бїꙗ Димократі́ꙗ''' и {{Lang-sr|Република Србија}} · срѣдьн҄ии [[Балка́ни|Балка́нъ]] дрьжа́ва ѥ́стъ ⁙ Сто́льнъ [[Бѣ́лъ Гра́дъ · Срь́бїи|Бѣ́лъ Гра́дъ]] ѥ́стъ ⁙ Дрьжа́вьнъ [[срь́бьскъ ѩꙁꙑ́къ|срь́бьскъ]] ѩꙁꙑ́къ ѥ́стъ ⁙ Люди́и 7 лєѡ́дръ обита́ѥтъ
 
 ==їсторі́ꙗ==
 Давѣ бꙑла самостоꙗтєл҄ьнаꙗ бѣ · 1918 лѣ́та по [[Прь́ва Свѣ́тьна Воина|Прьвѣ Свѣтьнѣ Воинѣ]] въшьла въ Срь́бъ · Хръва́тъ и Словѣ́ньць Кралѥ́вьства сѫставъ · послѣди имєноуѥмо [[Югосла́виꙗ]] · по [[Вътора Свѣтьна Воина|Въторѣ Свѣтьнѣ Воинѣ]] ꙗжє Социалистичьска  Съвѫꙁьна Димократі́ꙗ Югосла́виꙗ · ССД҃Ю · бѣ · ⁙ Послѣди распада ССД҃Ю въшьла въ съвѫꙁьнѫ дрьжа́вѫ Срь́бїѭ и Чрьного́риѥ бѣ · 2006 лѣ́та по вьсѥнародьнѣ гласовании [[Чрьна́ Гора́|Чрьнѣ́ Горѣ́]] Срь́бїꙗ стала одѣльна дрьжава ѥ́стъ
@@ -20,7 +20,7 @@
 *[[Но́въ Са́дъ]]
 *[[Нишь]]
 *[[Оу́жицє]]
-*[[Призрѣнь]]
+*[[Приꙁрѣнь]]
 
 == ꙁьри́ та́кождє ==
 {{commonscat|Serbia}}
