--- a/Ꙃвѣꙁда.mw
+++ b/Ꙃвѣꙁда.mw
@@ -1,6 +1,6 @@
 '''Sвѣꙁда''' ѥстъ нєбєсьно тѣло подобьноѥ нашємоу [[Слъньцє|Слъньцоу]]. ꙁа оудалѥниѥмь вєликомь о ꙁємлѩ ꙃвѣꙁда авлꙗѥтъ сѧ акꙑ свѣтьла тъчьца ночьнаѥго нєбєсє.
 ==ꙁьри тако жє==
-* [[Слъньце]]
+* [[Слъньцє]]
 
 [[Category:Ꙃвѣꙁ́дꙑ]]
 
