*Empty MediaWiki Message*

--- a/Слъньцє.mw
+++ b/Слъньцє.mw
@@ -1,7 +1,7 @@
 [[Дѣ́ло:Sun920607.jpg|right|thumb|Слъньцє]]
 '''Слъньцє''' [[Ꙃвѣꙁда|sвѣꙁда]] ѥстъ, вьсѣхъ sвѣꙁдъ намъ ближьши.
 
-[[Category:Ꙃвѣꙁ́дꙑ]]
+[[Category:Ꙃвѣ́ꙁдꙑ]]
 
 {{Link FA|ru}}
 {{Link FA|tr}}
