*Empty MediaWiki Message*

--- a/Сєдмица.mw
+++ b/Сєдмица.mw
@@ -1,6 +1,6 @@
-'''Седмица''' - ѥдиница изъмѣрени врѣмени ѥсть. Седмь дьньи съдръжитъ ѥсть.
+'''Сєдми́ца''' - ѥдиница иꙁъмѣрєниꙗ врѣмєни ѥсть. Сєдмь дьньи съдръжитъ ѥсть.
 
-== Дьньи имена ==
+== Дьньи имєна ==
 # [[понедѣл҄ьникъ]]
 # [[въторьникъ]]
 # [[срѣда]]
